Modified ListView Appearance.
No longer contains check boxes. Also shows default value retrieved from
xbox.

--- a/XEX Assistant/XEX Assistant.csproj
+++ b/XEX Assistant/XEX Assistant.csproj
@@ -67,6 +67,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Offset.cs" />
     <Compile Include="RealTimeEditing.cs" />
     <Page Include="MainWindow.xaml">
       <SubType>Designer</SubType>
