--- a/XEX Assistant/XEX Assistant.csproj
+++ b/XEX Assistant/XEX Assistant.csproj
@@ -143,6 +143,10 @@
   <ItemGroup>
     <Resource Include="xexassistant.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="next1.png" />
+    <Resource Include="next2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
